--- a/Presentation/App.api/appsettings.Production.json
+++ b/Presentation/App.api/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnetion": "Server=DESKTOP-5HFIHAD\\MYSSERVER;Database=OnionCQRS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnetion": "Server=DESKTOP-5HFIHAD\\MYSSERVER;Database=OnionCQRS;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=true;"
   }
 }
