--- a/Presentation/App.api/App.api.csproj
+++ b/Presentation/App.api/App.api.csproj
@@ -15,10 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\..\Core\App.Application\App.Application.csproj" />
+    <ProjectReference Include="..\..\Core\Mapper\App.Mapper.csproj" />
     <ProjectReference Include="..\..\Infrastructure\App.Persistence\App.Persistence.csproj" />
   </ItemGroup>
 
